--- a/01_notebook_cleaning.ipynb
+++ b/01_notebook_cleaning.ipynb
@@ -3672,15 +3672,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Ryan handling"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
    "outputs": [],
@@ -3690,12 +3681,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of Features needing median to be added in place of null values:\n",
-    "features=['percent_low_birthweight','primary_care_physicians_rate','mental_health_provider_rate','high_school_graduation_rate',\n",
+    "features=['percent_low_birthweight','primary_care_physicians_rate','high_school_graduation_rate',\n",
     "'food_environment_index','percent_with_access_to_exercise_opportunities','num_households_CHR','percent_single_parent_households_CHR',\n",
     "'violent_crime_rate','percent_limited_access_to_healthy_foods','percent_enrolled_in_free_or_reduced_lunch','percent_severe_housing_cost_burden',\n",
     "'percent_rural']"
@@ -3703,23 +3693,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_full['percent_low_birthweight'].fillna(df_full['percent_low_birthweight'].median(), inplace=True)\n",
-    "df_full['primary_care_physicians_rate'].fillna(df_full['primary_care_physicians_rate'].median(), inplace=True)\n",
-    "df_full['high_school_graduation_rate'].fillna(df_full['high_school_graduation_rate'].median(), inplace=True)\n",
-    "df_full['percent_with_access_to_exercise_opportunities'].fillna(df_full['percent_with_access_to_exercise_opportunities'].median(), inplace=True)\n",
-    "df_full['num_households_CHR'].fillna(df_full['num_households_CHR'].median(), inplace=True)\n",
-    "df_full['percent_single_parent_households_CHR'].fillna(df_full['percent_single_parent_households_CHR'].median(), inplace=True)\n",
-    "df_full['violent_crime_rate'].fillna(df_full['violent_crime_rate'].median(), inplace=True)\n",
-    "df_full['percent_limited_access_to_healthy_foods'].fillna(df_full['percent_limited_access_to_healthy_foods'].median(), inplace=True)\n",
-    "df_full['percent_enrolled_in_free_or_reduced_lunch'].fillna(df_full['percent_enrolled_in_free_or_reduced_lunch'].median(), inplace=True)\n",
-    "df_full['percent_severe_housing_cost_burden'].fillna(df_full['percent_severe_housing_cost_burden'].median(), inplace=True)\n",
-    "df_full['percent_rural'].fillna(df_full['percent_rural'].median(), inplace=True)\n",
-    "df_full['food_environment_index'].fillna(df_full['food_environment_index'].median(), inplace=True)\n",
-    "df_full['life_expectancy'].fillna(df_full['life_expectancy'].median(), inplace=True)"
+    "for i in features:\n",
+    "       df_full[i].fillna(df_full[i].median(), inplace = True)"
    ]
   },
   {
