--- a/03_notebook_preprocess_model.ipynb
+++ b/03_notebook_preprocess_model.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,9 @@
     "    ('ln', LinearRegression())\n",
     "])\n",
     "\n",
-    "pipe_ln_params = { \n",
+    "pipe_ln_params = { 'ln__fit_intercept': [False, True],\n",
+    "                  'ln__copy_X': [False, True],\n",
+    "                  'ln__normalize': [False, True]\n",
     "}\n",
     "\n",
     "pipe_ln.fit(Z_train, y_train)\n",
@@ -144,7 +146,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9331071494649233\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ln__copy_X': False, 'ln__fit_intercept': True, 'ln__normalize': False}"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(gs_ln.best_score_)\n",
+    "gs_ln.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +312,7 @@
        "43            percent_age_17_and_younger      0.143348"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,18 +321,333 @@
     "feature_names = features\n",
     "coefs_ln = pipe_ln.named_steps['ln'].coef_.flatten()\n",
     "\n",
-    "model_zip = zip(feature_names, coefs_ln)\n",
-    "model_zip_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
+    "model_zip_ln = zip(feature_names, coefs_ln)\n",
+    "model_zip_ln_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
     "\n",
-    "model_zip_df.sort_values(by = 'coefficients', ascending = False).head(10)"
+    "model_zip_ln_df.sort_values(by = 'coefficients', ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 2: KNN\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['algorithm', 'leaf_size', 'metric', 'metric_params', 'n_jobs', 'n_neighbors', 'p', 'weights'])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KNeighborsRegressor().get_params().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pipe_knn = Pipeline([\n",
+    "    ('knn', KNeighborsRegressor())\n",
+    "])\n",
+    "\n",
+    "pipe_knn_params = { 'knn__n_neighbors': [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100],\n",
+    "            }\n",
+    "\n",
+    "pipe_knn.fit(Z_train, y_train)\n",
+    "gs_knn = GridSearchCV(pipe_knn, \n",
+    "                        param_grid = pipe_knn_params, \n",
+    "                        cv=5)\n",
+    "\n",
+    "gs_knn.fit(Z_train, y_train);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.851301455655712\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'knn__n_neighbors': 5}"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(gs_knn.best_score_)\n",
+    "gs_knn.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn Training RMSE: 1.1430855549727068\n",
+      "knn Testing RMSE: 1.4479205383412166\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn_preds_train = gs_knn.predict(Z_train)\n",
+    "knn_preds_test = gs_knn.predict(Z_test)\n",
+    "\n",
+    "print(f'knn Training RMSE: {mean_squared_error(y_train, knn_preds_train, squared = False)}')\n",
+    "print(f'knn Testing RMSE: {mean_squared_error(y_test, knn_preds_test, squared = False)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training R2: 0.9061609510423924\n",
+      "Testing R2: 0.8586202527205257\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Training R2: {pipe_knn.score(Z_train, y_train)}')\n",
+    "print(f'Testing R2: {pipe_knn.score(Z_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'KNeighborsRegressor' object has no attribute 'coef_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-110-966e7b63e935>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcoefs_knn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipe_knn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnamed_steps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'knn'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel_zip_knn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoefs_knn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel_zip_knn_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_zip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coefficients'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'KNeighborsRegressor' object has no attribute 'coef_'"
+     ]
+    }
+   ],
+   "source": [
+    "# feature_names = features\n",
+    "# coefs_knn = pipe_knn.named_steps['knn'].coef_.flatten()\n",
+    "\n",
+    "# model_zip_knn = zip(feature_names, coefs_knn)\n",
+    "# model_zip_knn_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
+    "\n",
+    "# model_zip_knn_df.sort_values(by = 'coefficients', ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 3: Decision Tree "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['ccp_alpha', 'criterion', 'max_depth', 'max_features', 'max_leaf_nodes', 'min_impurity_decrease', 'min_impurity_split', 'min_samples_leaf', 'min_samples_split', 'min_weight_fraction_leaf', 'presort', 'random_state', 'splitter'])"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DecisionTreeRegressor().get_params().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ccp_alpha': 0.0,\n",
+       " 'criterion': 'mse',\n",
+       " 'max_depth': None,\n",
+       " 'max_features': None,\n",
+       " 'max_leaf_nodes': None,\n",
+       " 'min_impurity_decrease': 0.0,\n",
+       " 'min_impurity_split': None,\n",
+       " 'min_samples_leaf': 1,\n",
+       " 'min_samples_split': 2,\n",
+       " 'min_weight_fraction_leaf': 0.0,\n",
+       " 'presort': 'deprecated',\n",
+       " 'random_state': None,\n",
+       " 'splitter': 'best'}"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DecisionTreeRegressor().get_params()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipe_dt = Pipeline([\n",
+    "    ('dt', DecisionTreeRegressor())\n",
+    "])\n",
+    "\n",
+    "pipe_dt_params = {'dt__max_depth': [5, 10, None], \n",
+    "                  'dt__max_features': ['auto', 'log2'], \n",
+    "                'dt__max_depth': [2,4,6,8,10,12]\n",
+    "                 }\n",
+    "\n",
+    "pipe_dt.fit(Z_train, y_train)\n",
+    "gs_dt = GridSearchCV(pipe_dt, \n",
+    "                        param_grid = pipe_dt_params, \n",
+    "                        cv=5)\n",
+    "\n",
+    "gs_dt.fit(Z_train, y_train);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7868272591852264\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'dt__max_depth': 6, 'dt__max_features': 'auto'}"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(gs_dt.best_score_)\n",
+    "gs_dt.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dt Training RMSE: 1.1430855549727068\n",
+      "dt Testing RMSE: 1.4479205383412166\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt_preds_train = gs_dt.predict(Z_train)\n",
+    "dt_preds_test = gs_dt.predict(Z_test)\n",
+    "\n",
+    "print(f'dt Training RMSE: {mean_squared_error(y_train, knn_preds_train, squared = False)}')\n",
+    "print(f'dt Testing RMSE: {mean_squared_error(y_test, knn_preds_test, squared = False)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training R2: 1.0\n",
+      "Testing R2: 0.7865900595044211\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Training R2: {pipe_dt.score(Z_train, y_train)}')\n",
+    "print(f'Testing R2: {pipe_dt.score(Z_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'DecisionTreeRegressor' object has no attribute 'coef_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-124-31ed89d127e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcoefs_dt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipe_dt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnamed_steps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dt'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel_zip_dt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoefs_dt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel_zip_dt_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_zip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coefficients'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'DecisionTreeRegressor' object has no attribute 'coef_'"
+     ]
+    }
+   ],
+   "source": [
+    "# feature_names = features\n",
+    "# coefs_dt = pipe_dt.named_steps['dt'].coef_.flatten()\n",
+    "\n",
+    "# model_zip_dt = zip(feature_names, coefs_dt)\n",
+    "# model_zip_dt_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
+    "\n",
+    "# model_zip_dt_df.sort_values(by = 'coefficients', ascending = False).head(10)"
+   ]
   },
   {
    "cell_type": "code",
