--- a/03_notebook_preprocess_model.ipynb
+++ b/03_notebook_preprocess_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "dict_keys(['copy_X', 'fit_intercept', 'n_jobs', 'normalize'])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "{'ln__copy_X': False, 'ln__fit_intercept': True, 'ln__normalize': False}"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "43            percent_age_17_and_younger      0.143348"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
     "coefs_ln = pipe_ln.named_steps['ln'].coef_.flatten()\n",
     "\n",
     "model_zip_ln = zip(feature_names, coefs_ln)\n",
-    "model_zip_ln_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
+    "model_zip_ln_df = pd.DataFrame(model_zip_ln, columns = ['features', 'coefficients'])\n",
     "\n",
     "model_zip_ln_df.sort_values(by = 'coefficients', ascending = False).head(10)"
    ]
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "dict_keys(['algorithm', 'leaf_size', 'metric', 'metric_params', 'n_jobs', 'n_neighbors', 'p', 'weights'])"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "{'knn__n_neighbors': 5}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-110-966e7b63e935>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcoefs_knn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipe_knn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnamed_steps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'knn'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel_zip_knn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoefs_knn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel_zip_knn_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_zip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coefficients'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-21-638fdbd04bf5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcoefs_knn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipe_knn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnamed_steps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'knn'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel_zip_knn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoefs_knn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel_zip_knn_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_zip_knn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coefficients'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'KNeighborsRegressor' object has no attribute 'coef_'"
      ]
     }
@@ -466,7 +466,7 @@
     "# coefs_knn = pipe_knn.named_steps['knn'].coef_.flatten()\n",
     "\n",
     "# model_zip_knn = zip(feature_names, coefs_knn)\n",
-    "# model_zip_knn_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
+    "# model_zip_knn_df = pd.DataFrame(model_zip_knn, columns = ['features', 'coefficients'])\n",
     "\n",
     "# model_zip_knn_df.sort_values(by = 'coefficients', ascending = False).head(10)"
    ]
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "dict_keys(['ccp_alpha', 'criterion', 'max_depth', 'max_features', 'max_leaf_nodes', 'min_impurity_decrease', 'min_impurity_split', 'min_samples_leaf', 'min_samples_split', 'min_weight_fraction_leaf', 'presort', 'random_state', 'splitter'])"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        " 'splitter': 'best'}"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
     "    ('dt', DecisionTreeRegressor())\n",
     "])\n",
     "\n",
-    "pipe_dt_params = {'dt__max_depth': [5, 10, None], \n",
+    "pipe_dt_params = { \n",
     "                  'dt__max_features': ['auto', 'log2'], \n",
     "                'dt__max_depth': [2,4,6,8,10,12]\n",
     "                 }\n",
@@ -555,14 +555,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7868272591852264\n"
+      "0.7866097328808912\n"
      ]
     },
     {
@@ -571,7 +571,7 @@
        "{'dt__max_depth': 6, 'dt__max_features': 'auto'}"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,15 +583,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dt Training RMSE: 1.1430855549727068\n",
-      "dt Testing RMSE: 1.4479205383412166\n"
+      "dt Training RMSE: 1.2942601259590063\n",
+      "dt Testing RMSE: 1.6040689910332186\n"
      ]
     }
    ],
@@ -599,13 +599,13 @@
     "dt_preds_train = gs_dt.predict(Z_train)\n",
     "dt_preds_test = gs_dt.predict(Z_test)\n",
     "\n",
-    "print(f'dt Training RMSE: {mean_squared_error(y_train, knn_preds_train, squared = False)}')\n",
-    "print(f'dt Testing RMSE: {mean_squared_error(y_test, knn_preds_test, squared = False)}')"
+    "print(f'dt Training RMSE: {mean_squared_error(y_train, dt_preds_train, squared = False)}')\n",
+    "print(f'dt Testing RMSE: {mean_squared_error(y_test, dt_preds_test, squared = False)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
      "output_type": "stream",
      "text": [
       "Training R2: 1.0\n",
-      "Testing R2: 0.7865900595044211\n"
+      "Testing R2: 0.7882635260694536\n"
      ]
     }
    ],
@@ -624,21 +624,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'DecisionTreeRegressor' object has no attribute 'coef_'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-124-31ed89d127e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfeature_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeatures\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mcoefs_dt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipe_dt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnamed_steps\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'dt'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mflatten\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmodel_zip_dt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_names\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoefs_dt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel_zip_dt_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_zip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'coefficients'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DecisionTreeRegressor' object has no attribute 'coef_'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# feature_names = features\n",
     "# coefs_dt = pipe_dt.named_steps['dt'].coef_.flatten()\n",
@@ -647,6 +635,55 @@
     "# model_zip_dt_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
     "\n",
     "# model_zip_dt_df.sort_values(by = 'coefficients', ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Model 3: Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RandomForestRegressor().get_params().keys()\n",
+    "\n",
+    "pipe_rf = Pipeline([\n",
+    "    ('rf', RandomForestRegressor())\n",
+    "])\n",
+    "\n",
+    "pipe_rf_params = { 'rf__max_depth': [5,10,None],\n",
+    "                 }\n",
+    "\n",
+    "pipe_rf.fit(Z_train, y_train)\n",
+    "gs_rf = GridSearchCV(pipe_rf, \n",
+    "                        param_grid = pipe_rf_params, \n",
+    "                        cv=5)\n",
+    "\n",
+    "gs_rf.fit(Z_train, y_train);\n",
+    "\n",
+    "print(gs_rf.best_score_)\n",
+    "gs_rf.best_params_\n",
+    "\n",
+    "rf_preds_train = gs_rf.predict(Z_train)\n",
+    "rf_preds_test = gs_rf.predict(Z_test)\n",
+    "\n",
+    "print(f'rf Training RMSE: {mean_squared_error(y_train, rf_preds_train, squared = False)}')\n",
+    "print(f'rf Testing RMSE: {mean_squared_error(y_test, rf_preds_test, squared = False)}')\n",
+    "\n",
+    "print(f'Training R2: {pipe_rf.score(Z_train, y_train)}')\n",
+    "print(f'Testing R2: {pipe_rf.score(Z_test, y_test)}')"
    ]
   },
   {
