formatting page 3 with PCA model

--- a/03_preprocess_model.ipynb
+++ b/03_preprocess_model.ipynb
@@ -31,7 +31,8 @@
     "    - [Model #5, ADA Boost](#fifth)\n",
     "    - [Model #6, SVM](#sixth)\n",
     "    - [Model #7, TensorFlow NN](#seventh)\n",
-    "    - [Model #8, RandomForest](#eigth)\n"
+    "    - [Model #8, RandomForest](#eigth)\n",
+    "    - [Model #9, PCA, LinRe](#eigth)\n"
    ]
   },
   {
@@ -138,216 +139,6 @@
     "ss = StandardScaler()\n",
     "Z_train = ss.fit_transform(X_train)\n",
     "Z_test = ss.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['copy', 'iterated_power', 'n_components', 'random_state', 'svd_solver', 'tol', 'whiten'])"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca()\n",
-    "pca.get_params().keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ln/PCA Training RMSE: 0.9273531513274437\n",
-      "ln/PCA Testing RMSE: 0.9959703661508508\n",
-      "Training ln/PCA R2: 0.9386462698301442\n",
-      "Testing ln/PCA R2: 0.933007424012739\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'ln__fit_intercept': True,\n",
-       " 'ln__normalize': True,\n",
-       " 'pca__iterated_power': 1,\n",
-       " 'pca__n_components': 50,\n",
-       " 'pca__random_state': 42,\n",
-       " 'pca__svd_solver': 'randomized',\n",
-       " 'pca__tol': 0,\n",
-       " 'pca__whiten': True}"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Setting up the Pipeline/ GridSearch\n",
-    "pipe_ln = Pipeline([\n",
-    "    ('pca', PCA()),\n",
-    "    ('ln', LinearRegression()),\n",
-    "])\n",
-    "pipe_ln_params = {'ln__normalize':[True, False],\n",
-    "                  'ln__fit_intercept':[True, False],\n",
-    "                  'pca__n_components':[5, 7, 10, 12, 15, 20, 30, 50],\n",
-    "                  'pca__random_state':[42, 2021],\n",
-    "                  'pca__tol':[0, 0.1, 1],\n",
-    "                  'pca__whiten':[True, False],\n",
-    "                  'pca__svd_solver':['auto','full', 'arpack','randomized'],\n",
-    "                  'pca__iterated_power': [0, 1, 2, 3]\n",
-    "                  }\n",
-    "\n",
-    "pipe_ln.fit(Z_train, y_train)\n",
-    "gs_ln = GridSearchCV(pipe_ln, \n",
-    "                        param_grid = pipe_ln_params, \n",
-    "                        cv=5)\n",
-    "\n",
-    "gs_ln.fit(Z_train, y_train);\n",
-    "\n",
-    "ln_preds_train = gs_ln.predict(Z_train)\n",
-    "ln_preds_test = gs_ln.predict(Z_test)\n",
-    "print(f'ln/PCA Training RMSE: {mean_squared_error(y_train, ln_preds_train, squared = False)}')\n",
-    "print(f'ln/PCA Testing RMSE: {mean_squared_error(y_test, ln_preds_test, squared = False)}')\n",
-    "print(f'Training ln/PCA R2: {pipe_ln.score(Z_train, y_train)}')\n",
-    "print(f'Testing ln/PCA R2: {pipe_ln.score(Z_test, y_test)}')\n",
-    "gs_ln.best_params_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>features</th>\n",
-       "      <th>coefficients</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>percentile_rank_social_vulnerability</td>\n",
-       "      <td>3.492955</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>51</th>\n",
-       "      <td>percent_of_adults_completing_some_college_or_associate_degree</td>\n",
-       "      <td>2.024759</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>percent_age_17_and_younger</td>\n",
-       "      <td>2.004308</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>percent_minorities</td>\n",
-       "      <td>0.937395</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <td>percent_of_adults_with_bachelor_degree_or_higher</td>\n",
-       "      <td>0.917534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>lat</td>\n",
-       "      <td>0.845822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>33</th>\n",
-       "      <td>percent_hispanic</td>\n",
-       "      <td>0.763944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>percent_age_65_and_older</td>\n",
-       "      <td>0.757841</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>num_households_CHR</td>\n",
-       "      <td>0.551398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>percent_adults_with_obesity</td>\n",
-       "      <td>0.453918</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                         features  \\\n",
-       "47                           percentile_rank_social_vulnerability   \n",
-       "51  percent_of_adults_completing_some_college_or_associate_degree   \n",
-       "43                                     percent_age_17_and_younger   \n",
-       "45                                             percent_minorities   \n",
-       "52               percent_of_adults_with_bachelor_degree_or_higher   \n",
-       "0                                                             lat   \n",
-       "33                                               percent_hispanic   \n",
-       "42                                       percent_age_65_and_older   \n",
-       "17                                             num_households_CHR   \n",
-       "9                                     percent_adults_with_obesity   \n",
-       "\n",
-       "    coefficients  \n",
-       "47      3.492955  \n",
-       "51      2.024759  \n",
-       "43      2.004308  \n",
-       "45      0.937395  \n",
-       "52      0.917534  \n",
-       "0       0.845822  \n",
-       "33      0.763944  \n",
-       "42      0.757841  \n",
-       "17      0.551398  \n",
-       "9       0.453918  "
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "feature_names = features\n",
-    "coefs_ln = pipe_ln.named_steps['ln'].coef_.flatten()\n",
-    "model_zip = zip(feature_names, coefs_ln)\n",
-    "model_zip_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
-    "model_zip_df.sort_values(by = 'coefficients', ascending = False).head(10)"
    ]
   },
   {
@@ -1911,6 +1702,238 @@
     "print(f'rf Testing RMSE: {mean_squared_error(y_test, rf_preds_test, squared = False)}')\n",
     "print(f'Training R2: {pipe_rf.score(Z_train, y_train)}')\n",
     "print(f'Testing R2: {pipe_rf.score(Z_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Quick Analysis**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='ninthh'></a>\n",
+    "### Model 9: PCA Pipeline w/ Lin Reg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['copy', 'iterated_power', 'n_components', 'random_state', 'svd_solver', 'tol', 'whiten'])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pca()\n",
+    "pca.get_params().keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ln/PCA Training RMSE: 0.9273531513274437\n",
+      "ln/PCA Testing RMSE: 0.9959703661508508\n",
+      "Training ln/PCA R2: 0.9386462698301442\n",
+      "Testing ln/PCA R2: 0.933007424012739\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'ln__fit_intercept': True,\n",
+       " 'ln__normalize': True,\n",
+       " 'pca__iterated_power': 1,\n",
+       " 'pca__n_components': 50,\n",
+       " 'pca__random_state': 42,\n",
+       " 'pca__svd_solver': 'randomized',\n",
+       " 'pca__tol': 0,\n",
+       " 'pca__whiten': True}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Setting up the Pipeline/ GridSearch\n",
+    "pipe_ln = Pipeline([\n",
+    "    ('pca', PCA()),\n",
+    "    ('ln', LinearRegression()),\n",
+    "])\n",
+    "pipe_ln_params = {'ln__normalize':[True, False],\n",
+    "                  'ln__fit_intercept':[True, False],\n",
+    "                  'pca__n_components':[5, 7, 10, 12, 15, 20, 30, 50],\n",
+    "                  'pca__random_state':[42, 2021],\n",
+    "                  'pca__tol':[0, 0.1, 1],\n",
+    "                  'pca__whiten':[True, False],\n",
+    "                  'pca__svd_solver':['auto','full', 'arpack','randomized'],\n",
+    "                  'pca__iterated_power': [0, 1, 2, 3]\n",
+    "                  }\n",
+    "\n",
+    "pipe_ln.fit(Z_train, y_train)\n",
+    "gs_ln = GridSearchCV(pipe_ln, \n",
+    "                        param_grid = pipe_ln_params, \n",
+    "                        cv=5)\n",
+    "\n",
+    "gs_ln.fit(Z_train, y_train);\n",
+    "\n",
+    "ln_preds_train = gs_ln.predict(Z_train)\n",
+    "ln_preds_test = gs_ln.predict(Z_test)\n",
+    "print(f'ln/PCA Training RMSE: {mean_squared_error(y_train, ln_preds_train, squared = False)}')\n",
+    "print(f'ln/PCA Testing RMSE: {mean_squared_error(y_test, ln_preds_test, squared = False)}')\n",
+    "print(f'Training ln/PCA R2: {pipe_ln.score(Z_train, y_train)}')\n",
+    "print(f'Testing ln/PCA R2: {pipe_ln.score(Z_test, y_test)}')\n",
+    "gs_ln.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>features</th>\n",
+       "      <th>coefficients</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>percentile_rank_social_vulnerability</td>\n",
+       "      <td>3.492955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51</th>\n",
+       "      <td>percent_of_adults_completing_some_college_or_associate_degree</td>\n",
+       "      <td>2.024759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>percent_age_17_and_younger</td>\n",
+       "      <td>2.004308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>percent_minorities</td>\n",
+       "      <td>0.937395</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>percent_of_adults_with_bachelor_degree_or_higher</td>\n",
+       "      <td>0.917534</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lat</td>\n",
+       "      <td>0.845822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>percent_hispanic</td>\n",
+       "      <td>0.763944</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>percent_age_65_and_older</td>\n",
+       "      <td>0.757841</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>num_households_CHR</td>\n",
+       "      <td>0.551398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>percent_adults_with_obesity</td>\n",
+       "      <td>0.453918</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                         features  \\\n",
+       "47                           percentile_rank_social_vulnerability   \n",
+       "51  percent_of_adults_completing_some_college_or_associate_degree   \n",
+       "43                                     percent_age_17_and_younger   \n",
+       "45                                             percent_minorities   \n",
+       "52               percent_of_adults_with_bachelor_degree_or_higher   \n",
+       "0                                                             lat   \n",
+       "33                                               percent_hispanic   \n",
+       "42                                       percent_age_65_and_older   \n",
+       "17                                             num_households_CHR   \n",
+       "9                                     percent_adults_with_obesity   \n",
+       "\n",
+       "    coefficients  \n",
+       "47      3.492955  \n",
+       "51      2.024759  \n",
+       "43      2.004308  \n",
+       "45      0.937395  \n",
+       "52      0.917534  \n",
+       "0       0.845822  \n",
+       "33      0.763944  \n",
+       "42      0.757841  \n",
+       "17      0.551398  \n",
+       "9       0.453918  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_names = features\n",
+    "coefs_ln = pipe_ln.named_steps['ln'].coef_.flatten()\n",
+    "model_zip = zip(feature_names, coefs_ln)\n",
+    "model_zip_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
+    "model_zip_df.sort_values(by = 'coefficients', ascending = False).head(10)"
    ]
   },
   {
