--- a/Notebooks/06_times_series_AR.ipynb
+++ b/Notebooks/06_times_series_AR.ipynb
@@ -2121,11 +2121,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Multivariate"
+   ]
   },
   {
    "cell_type": "code",
