notebooks 5 and 6 cleaned

--- a/05_cleaning_ts.ipynb
+++ b/05_cleaning_ts.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook 5: Merging and Cleaning data for Time Series Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yearly data for food insecurity, provided by Feeding America, is in 10 separate dataframes, some with county level data and some with state level data. This notebook cleans and merges those 10 notebooks into a single notebook and exports it for Time Series modeling in Notebook 6. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importing and reading in data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -48,25 +69,6 @@
    ],
    "source": [
     "cd Documents/GA/PL/project_group/lancelot_group_project"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #years = {(df_09: MMG2011_2009Data_ToShare),\n",
-    "#          (df_10: MMG2012_2010Data_ToShare),\n",
-    "#          (df_11: MMG2013_2011Data_ToShare),\n",
-    "#          (df_12: MMG2014_2012Data_ToShare),\n",
-    "#          (df_13: MMG2015_2013Data_ToShare),\n",
-    "#          (df_14: MMG2016_2014Data_ToShare),\n",
-    "#          (df_15: MMG2017_2015Data_ToShare),\n",
-    "#          (df_16: MMG2018_2016Data_ToShare),\n",
-    "#          (df_17: MMG2019_2017Data_ToShare),\n",
-    "#          (df_18: MMG2020_2018Data_ToShare)\n",
-    "#         }"
    ]
   },
   {
@@ -1397,7 +1399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Merging in 2009"
+    "### Merging 2009 data with the rest of the data state per county reporting data"
    ]
   },
   {
@@ -1546,7 +1548,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merging the two dataframes"
+    "## Preparing to merge county and state level FI reporting dataframes"
    ]
   },
   {
@@ -1775,7 +1777,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Groupby for Means"
+    "### Groupby for mean FI per state"
    ]
   },
   {
@@ -1839,7 +1841,12 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -2552,21 +2559,14 @@
     }
    ],
    "source": [
-    "df_ms"
+    "df_ms.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge the two df's together"
+    "## Finally, merging the two dfs together"
    ]
   },
   {
@@ -2581,7 +2581,12 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
