--- a/03_preprocess_model.ipynb
+++ b/03_preprocess_model.ipynb
@@ -32,7 +32,7 @@
     "    - [Model #6, SVM](#sixth)\n",
     "    - [Model #7, TensorFlow NN](#seventh)\n",
     "    - [Model #8, RandomForest](#eigth)\n",
-    "    - [Model #9, PCA, LinRe](#eigth)\n"
+    "    - [Model #9, PCA, LinRe](#ninth)\n"
    ]
   },
   {
@@ -1722,7 +1722,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='ninthh'></a>\n",
+    "<a id='ninth'></a>\n",
     "### Model 9: PCA Pipeline w/ Lin Reg"
    ]
   },
