combining alec and ryan

--- a/01_data_merging_cleaning.ipynb
+++ b/01_data_merging_cleaning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# <img src=\"./resources/GA.png\" width=\"25\" height=\"25\" />   <span style=\"color:Purple\">Project 5 :  Food Insecurity Regression Study</span> \n",
     "---\n",
-    "## <span style=\"color:Green\">Preprocessing - Cleaning / Merging Datasets</span>      \n",
+    "## <span style=\"color:Green\">01 - Preprocessing - Cleaning / Merging Datasets</span>      \n",
     "\n",
     "#### Alec Edgecliffe-Johnson, Ryan McDonald, Andrew Roberts, Ira Seidman- General Assembly \n",
     "\n",
