uni plots working now

--- a/03_preprocess_model.ipynb
+++ b/03_preprocess_model.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "43            percent_age_17_and_younger      0.143348"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,6 +389,17 @@
     "model_zip = zip(feature_names, coefs_ln)\n",
     "model_zip_df = pd.DataFrame(model_zip, columns = ['features', 'coefficients'])\n",
     "model_zip_df.sort_values(by = 'coefficients', ascending = False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving a csv copy for tableau\n",
+    "lr_coef_10= model_zip_df.sort_values(by = 'coefficients', ascending = False).head(10)\n",
+    "lr_coef_10.to_csv('./resources/lr_coef_tableau.csv', index = False)"
    ]
   },
   {
