--- a/07_multivariate_var.ipynb
+++ b/07_multivariate_var.ipynb
@@ -403,8 +403,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Plots developed and added to Tableau/Streamlit**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,12 +508,14 @@
     "################################################ Plotting ######################################################\n",
     "##################################################################################################################\n",
     "\n",
+    "# PLOTS PREVIOUSLY DEVELOPED AND ADDED TO TABLEAU/STREAMLIT!!\n",
+    "\n",
     "#     fig, ax = plt.subplots(figsize =(15,5))\n",
     "#     chart = sns.lineplot(x='time', y = s, data = train_data)\n",
     "#     chart.set_title(s)\n",
     "#     valid_data.plot(ax=ax, color = 'blue', marker = 'o', legend = True)\n",
     "    \n",
-    "#     #Plotting val\n",
+    "# #Plotting val\n",
     "#     try:\n",
     "#         t_fcast1.plot(ax=ax, color = 'red', marker = 'o', legend = True)\n",
     "#     except:\n",
@@ -560,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +648,7 @@
        "4 2014-01-01  Alabama  20.6  18.800626"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +754,7 @@
        "4 2021-01-01  Alabama  18.602132  21.542153"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,19 +765,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-17-33f53288d2e1>:2: SettingWithCopyWarning: \n",
+      "<ipython-input-20-33f53288d2e1>:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  final_forecasts['pov'][final_forecasts['pov'] == 0] = np.nan\n",
-      "<ipython-input-17-33f53288d2e1>:3: SettingWithCopyWarning: \n",
+      "<ipython-input-20-33f53288d2e1>:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -786,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +896,7 @@
        "4 2014-01-01  Alabama  20.6  18.800626"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
