--- a/06_univariate_times_series.ipynb
+++ b/06_univariate_times_series.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we develop three univariate time series models using Arima, Auto Arima and Prophet to forecast predictions for Food Insecurity rates in a single state until 2026. We then develop a method to generate these predictions for each state in the country, save the predicitons to a dataframe and then concatenate all dataframes together into a single dataframe. Ultimately, given the poor accuracy of the Arima and Auto-Arima models, we do not keep these models and instead use the predictions from the Prophet model as our forecasted Food Insecurity rates. We use this exported dataframe with our forecasts in Tableau, which is then hosted on our Streamlit app, the script for which can be found in the 'food_ins.py' file in this repo."
+    "In this notebook we develop three univariate time series models using Arima, Auto Arima and Prophet to forecast predictions for Food Insecurity rates in a single state until 2026. We then develop a method to generate these predictions for each state in the country, save the predictions to a dataframe and then concatenate all dataframes together into a single dataframe. Ultimately, given the poor accuracy of the Arima and Auto-Arima models, we do not keep these models and instead use the predictions from the Prophet model as our forecasted Food Insecurity rates. We use this exported dataframe with our forecasts in Tableau, which is then hosted on our Streamlit app, the script for which can be found in the **'04_streamlit_code.py'** file in this repo."
    ]
   },
   {
