formatting changes, etc... READY TO GO!

--- a/07_multivariate_var.ipynb
+++ b/07_multivariate_var.ipynb
@@ -406,7 +406,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Plots developed and added to Tableau/Streamlit**"
+    "**Plots developed, saved to CSV and added to Tableau/Streamlit**"
    ]
   },
   {
@@ -899,13 +899,6 @@
     "#Exporting to CSV for use in tableau\n",
     "# output_df.to_csv('./data/time_series/var_model_preds.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
